<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/blue"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/TvCancel" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/blue"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btnUpload" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/TvTheme" />

        <EditText
            android:id="@+id/etTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/TvContent" />

        <EditText
            android:id="@+id/etContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dddddd" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" >

        <LinearLayout
            android:id="@+id/photoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPhoto"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/add" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvRadition"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/radition"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/tvRadition" />

            <TextView
                android:id="@+id/tvAtmosphere"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableTop="@drawable/atmosphere"
                android:gravity="center_vertical|center_horizontal"
                android:text="大气污染" />

            <TextView
                android:id="@+id/tvZoology"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableTop="@drawable/zoology"
                android:gravity="center_vertical|center_horizontal"
                android:text="生态污染" />

            <TextView
                android:id="@+id/tvWater"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableTop="@drawable/water"
                android:gravity="center_vertical|center_horizontal"
                android:text="水污染" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvBuild"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/build"
                android:gravity="center_vertical|center_horizontal"
                android:text="建设污染" />

            <TextView
                android:id="@+id/tvSolid"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableTop="@drawable/solid"
                android:gravity="center_vertical|center_horizontal"
                android:text="固废污染" />

            <TextView
                android:id="@+id/tvNoise"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableTop="@drawable/noise"
                android:gravity="center_vertical|center_horizontal"
                android:text="噪声污染" />

            <TextView
                android:id="@+id/tvOther"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableTop="@drawable/other"
                android:gravity="center_vertical|center_horizontal"
                android:text="其他污染" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>